# Little-Compiler

./: .gitignore  CMakeLists.txt  in.txt  main.c  out.txt  pair.c  pair.h  preprocessing.c  preprocessing.h  print_syntax_tree.c  print_syntax_tree.h  recursive_descent.c  recursive_descent.h  scanner.c  scanner.h
doc/: 实验一 预处理.md  实验七 对算术表达式构造递归下降翻译器.md  实验三 词法分析.md  实验九 构造能处理完整程序的递归下降翻译器.md  实验二 标识符的识别.md  实验六 对完整程序的递归下降分析.md  实验四 对算术表达式的递归下降分析.md
